test/typeerrors/ex9.golden
Building file ../test/typeerrors/ex9.act
  Compiling ex9.act for release

ERROR: Error when compiling ex9 module: Type error
Cannot satisfy the following simultaneous constraints for the unknown types t0, t1:

  |
4 |a = f(3,"hej")
  |    ^
f has had its polymorphic type [A(Plus)] => (A, A) -> A instantiated to (t1, t1) -> t1, so
t1 must implement __builtin__.Plus

  |
4 |a = f(3,"hej")
  |      ^
The type of 3 (which we call t0) must implement __builtin__.Number

  |
4 |a = f(3,"hej")
  |    ^^^^^^^^^^
The type of f(3, "hej") (which we call t0) must be a subtype of t1

  |
4 |a = f(3,"hej")
  |    ^^^^^^^^^^
The type of f(3, "hej") ( __builtin__.str) must be a subclass of t1

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

